Fix book content padding on mobile

--- a/theme/stylesheets/book/markdown.less
+++ b/theme/stylesheets/book/markdown.less
@@ -21,7 +21,7 @@
     }
 }
 .book .book-body .page-wrapper .page-inner section.normal {
-    padding: 25px 0px;
+    padding-bottom: 25px;
     padding-top: 15px;
     color:@page-color;
 
