--- a/theme/stylesheets/book/progress.less
+++ b/theme/stylesheets/book/progress.less
@@ -16,7 +16,7 @@
         width: 100%;
         position: relative;
         background: #fff;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
 
         .bar {
             height: @bar-height;
